# AgenticAI

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  mcp_config.json  pyproject.toml
.cursor/: mcp.json
src/: cli.py
src/agents/business_developer/: __init__.py  agent.py  server.py  sub_agents.py
src/agents/generative_ai/: __init__.py  agent.py  server.py  sources.py
src/agents/physical_ai/: __init__.py  agent.py  newsletter.py  scraper.py  server.py
src/agents/sw_architect/: __init__.py  agent.py  server.py  sub_agents.py
src/config/: settings.py
src/core/: __init__.py  base_agent.py  llm_provider.py  mcp_server.py  task_manager.py  template_engine.py  web_scraper.py
src/orchestrator/: __init__.py  coordinator.py  server.py
src/templates/: newsletter.html.j2  newsletter.md.j2  report.md.j2
tests/: conftest.py  test_agents.py  test_core.py  test_mcp_servers.py  test_orchestrator.py
